верикация добавлено обрудования тип и ид
